--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -42,7 +42,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background-color: #2a4969;
     color: white;
     font-weight: 600;
   }
@@ -85,7 +85,7 @@
   }
 
   .card svg.material-icons path {
-    fill: #888;
+    fill: rgb(136, 136, 136);
   }
 
   .card-container {
@@ -98,8 +98,8 @@
   .card {
     all: unset;
     border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
+    border: 1px solid rgb(158, 157, 158);
+    background-color: #ffffff;
     height: 40px;
     width: 200px;
     margin: 0 8px 16px;
@@ -135,7 +135,7 @@
   }
 
   .card.highlight-card {
-    background-color: #1976d2;
+    background-color: #1925d2;
     color: white;
     font-weight: 600;
     border: none;
@@ -352,6 +352,9 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
+  <hr>
+  <app-main-menu></app-main-menu>
+  <hr>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
