--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -1,4 +1,3 @@
-<h1>UniSell</h1>
 
 <!--<p>{{ loginStatus }}</p>-->
 
@@ -31,7 +30,7 @@
   
     .mainbar {
       position: absolute;
-      top: 10;
+      top: 0;
       left: 0;
       right: 0;
       height: 100px;
@@ -58,7 +57,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: right;
     transition: all 0.2s ease-in-out;
     line-height: 24px;
   }
@@ -70,7 +69,7 @@
     align-items:flex-end;
     margin-top: 16px;
   }
-   
+  
 
   </style>
 
