updating-components-and-top-bar

--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -1,27 +1,2 @@
-
-<!--<p>{{ loginStatus }}</p>-->
-
-
-
-<!-- Main Bar -->
-<div class="mainbar" role="banner">
-    <img
-      width="80"
-      alt="Quackhead Logo"
-      src="http://iconbug.com/download/size/256/icon/173/cute-blue-duckling/"
-    />
-    <h1>UniSell</h1>
-    
-    <div class="card-container">
-        <button class="card card-small" (click)="onClick()">Login</button>
-        </div>
-    
-    <!-- <div class="card-container">
-        <button class="card card-small"
-        {click}="onLogin()">Login</button>
-        </div> -->
-
-   
-        <input type="hidden" #selection>
-    
-  </div>
+<app-top-bar></app-top-bar> <!-- -->
+<h1>Hello</h1>
