--- a/Project/GroupProject/src/app/top-bar/top-bar.component.html
+++ b/Project/GroupProject/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,31 @@
-<p>top-bar works!</p>
+
+<!-- <p>{{ loginStatus }}</p>-- -->
+
+
+
+<!-- Top Bar -->
+<div class="mainbar" role="banner">
+    <img
+      width="80"
+      alt="Quackhead Logo"
+      src="/assets/DuckLogo" alt="image"
+    />
+    <h1>UniSell</h1>
+    
+    <div class="card-container">
+        <button class="card card-small" (click)="onClick()">Login</button>
+    </div>
+    
+    <div class="card-container">
+        <button class="card card-small" (click)="onClick()">Profile</button>
+    </div>
+        
+    <!-- <div class="card-container">
+        <button class="card card-small"
+        {click}="onLogin()">Login</button>
+        </div> -->
+
+   
+        <input type="hidden" #selection>
+    
+  </div>
