main-menu-outline-update

--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!-- <app-top-bar></app-top-bar> -->
 
+<!-- <app-main-menu></app-main-menu> -->
+
 <app-main-menu></app-main-menu>
+<app-item-preview></app-item-preview>
 
 <!-- <app-template></app-template> -->
