--- a/Project/GroupProject/src/app/item-preview/item-preview.component.html
+++ b/Project/GroupProject/src/app/item-preview/item-preview.component.html
@@ -1,1 +1,29 @@
-<p>item-preview works!</p>
+
+<div class="itemPreview2" role="menuitem">
+    <!-- This is where the product image is 
+    <img  
+        width=200
+        alt="ItemImage"
+
+    /> -->
+
+</div>
+
+
+<div class="itemPreview" role="menuitem">
+    <!-- This is where the product image is -->
+
+    
+    <iframe width="300" height="300" style="border:1px solid black;">
+    </iframe>
+
+    <h3>Title</h3>
+    <h5>Price</h5>
+
+    <div class="card-container">
+        <button type="button">Learn More</button>
+    </div>
+   
+
+</div>
+
