--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -1,2 +1,22 @@
 <app-top-bar></app-top-bar> <!-- -->
-<h1>Hello</h1>
+
+<div class="search-container">
+    <form action="/action_page.php">
+       <input type="text" placeholder="Search.." name="search">
+       <i> </i>
+       <button type="button" style="margin:20px">Search</button>
+       <button type="button">Apply Filter</button>
+
+    </form>
+
+    
+</div>
+
+
+
+<div class="itemSet">
+    <app-item-preview></app-item-preview> 
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
+</div>
