--- a/Project/GroupProject/src/app/top-bar/top-bar.component.html
+++ b/Project/GroupProject/src/app/top-bar/top-bar.component.html
@@ -12,6 +12,7 @@
     />
     <h1>UniSell</h1>
     
+
     <div class="card-container">
         <button class="card card-small" (click)="onClick()">Login</button>
     </div>
@@ -19,13 +20,18 @@
     <div class="card-container">
         <button class="card card-small" (click)="onClick()">Profile</button>
     </div>
-        
+
+    <!--
+    <div class="card-container">
+        <button type="button" (click)="onClick()">Login</button>
+    </div> -->
+    
     <!-- <div class="card-container">
         <button class="card card-small"
         {click}="onLogin()">Login</button>
-        </div> -->
+    </div> -->
 
    
         <input type="hidden" #selection>
     
-  </div>
+</div>
