worked-on-formatting

--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -1,5 +1,8 @@
 <app-top-bar></app-top-bar> <!-- -->
 
+<!-- <app-search-bar></app-search-bar> -->
+      
+
 <div class="search-container">
     <form action="/action_page.php">
        <input type="text" placeholder="Search.." name="search">
@@ -8,13 +11,18 @@
        <button type="button">Apply Filter</button>
 
     </form>
-
-    
 </div>
 
 
-
 <div class="itemSet">
+    <app-item-preview></app-item-preview> 
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview> 
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
+    <app-item-preview></app-item-preview>
     <app-item-preview></app-item-preview> 
     <app-item-preview></app-item-preview>
     <app-item-preview></app-item-preview>
