--- a/Project/GroupProject/src/app/main-menu/main-menu.component.scss
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.scss
@@ -1,7 +1,3 @@
-.itemSet {
-    display: flex;
-    width: 100%;
-}
 
 .search-container {
     float: left;
@@ -12,6 +8,9 @@
     font-size: 50px;
     border: none;
     cursor: pointer;
+    //position: relative;
+    width: 100%;
+
 }
 
 .search-container input[type=text] {
@@ -22,3 +21,12 @@
     padding: 3px;
 }
 
+
+.itemSet {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 16px;
+    justify-content: left;
+    width: 100%;
+    position: relative;
+}
