--- a/Project/GroupProject/src/app/top-bar/top-bar.component.scss
+++ b/Project/GroupProject/src/app/top-bar/top-bar.component.scss
@@ -1,11 +1,10 @@
 .mainbar {
-  // position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
   height: 100px;
   display: flex;
-  margin: 0 8px 16px;
   align-items: center;
   background-color: #2a4969;
   color: white;
@@ -41,7 +40,7 @@
   //align-items: flex-end;
   margin-top: 16px;
   //margin-right: absolute;
-  //align-self: right;
+  align-self: right;
   //right: 0;
 }
 
