--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <!-- <app-main-menu></app-main-menu> -->
 
-<app-main-menu></app-main-menu>
-
 <!-- <app-template></app-template> -->
+
+<app-edit-profile></app-edit-profile>
