Created-profile-edit-page

--- a/Project/GroupProject/src/app/edit-profile/edit-profile.component.html
+++ b/Project/GroupProject/src/app/edit-profile/edit-profile.component.html
@@ -21,7 +21,20 @@
                 <label for="number">Number:</label>
                 <input type="text" id="number" name="number"><br><br>
             </div>
-            <input type="submit" value="Submit">
+            <h3>Address</h3>
+            <div class="Address">
+                <label for="address1">Address Line 1:</label>
+                <input type="text" id="address1" name="address1"><br><br>
+                <label for="address2">Address Line 2:</label>
+                <input type="text" id="address2" name="address2"><br><br>
+                <label for="city">City:</label>
+                <input type="text" id="city" name="city"><br><br>
+                <label for="state">State:</label>
+                <input type="text" id="state" name="state"><br><br>
+                <label for="zipcode">Zipcode:</label>
+                <input type="text" id="zipcode" name="zipcode"><br><br>
+            </div>
+            <input type="submit" value="Update">
         </form>
     </div>
 </div>
