item-preview-update

--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!-- <app-template></app-template> -->
 
-<app-edit-profile></app-edit-profile>
+<!-- <app-edit-profile></app-edit-profile> -->
+
+<app-main-menu></app-main-menu>
