--- a/Project/GroupProject/src/app/item-preview/item-preview.component.html
+++ b/Project/GroupProject/src/app/item-preview/item-preview.component.html
@@ -13,7 +13,7 @@
 <div class="itemPreview" role="menuitem">
     <!-- This is where the product image is -->
 
-    
+    <!--
     <iframe width="300" height="300" style="border:1px solid black;">
     </iframe>
 
@@ -22,8 +22,15 @@
 
     <div class="card-container">
         <button type="button">Learn More</button>
-    </div>
+    </div> -->
    
+    <div class="card">
+        <img src="/assets/DuckLogo" alt="Avatar" style="width:100%">
+        <div class="container">
+          <h4><b>Ducky</b></h4>
+          <p>Price: $1</p>
+        </div>
+      </div>
 
 </div>
 
