--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -6,4 +6,6 @@
 
 <!-- <app-edit-profile></app-edit-profile> -->
 
-<app-item-preview></app-item-preview>
+<!-- <app-item-preview></app-item-preview> -->
+
+<app-main-menu></app-main-menu>
