--- a/Project/GroupProject/src/app/item-preview/item-preview.component.html
+++ b/Project/GroupProject/src/app/item-preview/item-preview.component.html
@@ -25,12 +25,12 @@
     </div> -->
    
     <div class="card">
-        <img src="/assets/DuckLogo" alt="Avatar" style="width:100%">
+        <img src="/assets/DuckLogo" alt="Avatar">
         <div class="container">
           <h4><b>Ducky</b></h4>
           <p>Price: $1</p>
         </div>
-      </div>
+    </div>
 
 </div>
 
