individual item page

--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -2,7 +2,6 @@
 
 <!-- <app-main-menu></app-main-menu> -->
 
-<app-main-menu></app-main-menu>
-<app-item-preview></app-item-preview>
+<app-item-menu></app-item-menu>
 
 <!-- <app-template></app-template> -->
