--- a/Project/GroupProject/src/app/item-menu/item-menu.component.html
+++ b/Project/GroupProject/src/app/item-menu/item-menu.component.html
@@ -1,1 +1,39 @@
-<p>item-menu works!</p>
+
+<app-top-bar></app-top-bar> 
+<h1>Item Description</h1>
+<!--style="float: left;"-->
+<div class="itemPictureAndDescription">
+  <iframe width="300" height="300" style="border:1px solid black;">
+    <label for="fname">Image:</label><br>
+   <img
+      alt="Product Image"
+      src="/assets/DuckLogo" alt="image"
+    />
+  </iframe>
+  <div class ="itemDescription">
+    <p style="text-align:center;">Item Description</p>
+    <p>Here is where the seller will give a description of the item they want to sell for others to see.</p>
+    <p>Ducky Mo is an amazing duck.</p>
+    <p></p>
+    <p style="text-align:center;">Price: $12,000</p>
+  </div>
+</div> 
+<!--
+<div style="float: right; text-align:center;">
+  <p style="text-align:center;">Item Description</p>
+</div> --> 
+<p></p>
+<form>
+  <h2> Contact </h2>
+  <button type="button" style="margin:20px">View Seller Profile</button>
+  <p></p>
+  <label for="fname">First name: Ducky</label><br>
+  <p></p>
+  <label for="fname">Last name: Mo</label><br>
+  <p></p>
+  <label for="fname">Email: DuckyMo@gmail.com </label><br>
+  <p></p>
+  <label for="fname">Phone Number: xxx-xxx-xxxx</label><br>
+  <p></p>
+  <label for="fname">Location: Danville</label><br>
+</form>
