--- a/Project/GroupProject/src/app/app.component.html
+++ b/Project/GroupProject/src/app/app.component.html
@@ -1,9 +1,1 @@
-<!-- <app-top-bar></app-top-bar> -->
-
-<!-- <app-main-menu></app-main-menu> -->
-
-<!-- <app-template></app-template> -->
-
-<!-- <app-edit-profile></app-edit-profile> -->
-
-<!-- <app-item-preview></app-item-preview> -->
+<router-outlet></router-outlet>
