--- a/Project/GroupProject/src/app/item-menu/item-menu.component.html
+++ b/Project/GroupProject/src/app/item-menu/item-menu.component.html
@@ -1,39 +1,34 @@
-
-<app-top-bar></app-top-bar> 
+<app-top-bar></app-top-bar>
 <h1>Item Description</h1>
 <!--style="float: left;"-->
 <div class="itemPictureAndDescription">
   <iframe width="300" height="300" style="border:1px solid black;">
     <label for="fname">Image:</label><br>
-   <img
-      alt="Product Image"
-      src="/assets/DuckLogo" alt="image"
-    />
+    <img alt="Product Image" src="/assets/DuckLogo" alt="image" />
   </iframe>
-  <div class ="itemDescription">
+  <div class="itemDescription">
     <p style="text-align:center;">Item Description</p>
-    <p>Here is where the seller will give a description of the item they want to sell for others to see.</p>
-    <p>Ducky Mo is an amazing duck.</p>
+    <p>{{itemDescription}}</p>
     <p></p>
-    <p style="text-align:center;">Price: $12,000</p>
+    <p style="text-align:center;">Price: {{price}}</p>
   </div>
-</div> 
+</div>
 <!--
 <div style="float: right; text-align:center;">
   <p style="text-align:center;">Item Description</p>
-</div> --> 
+</div> -->
 <p></p>
 <form>
   <h2> Contact </h2>
   <button type="button" style="margin:20px">View Seller Profile</button>
   <p></p>
-  <label for="fname">First name: Ducky</label><br>
+  <label for="fname">First name: {{firstName}}</label><br>
   <p></p>
-  <label for="fname">Last name: Mo</label><br>
+  <label for="fname">Last name: {{lastName}}</label><br>
   <p></p>
-  <label for="fname">Email: DuckyMo@gmail.com </label><br>
+  <label for="fname">Email: {{email}}</label><br>
   <p></p>
-  <label for="fname">Phone Number: xxx-xxx-xxxx</label><br>
+  <label for="fname">Phone Number: {{phoneNumber}}</label><br>
   <p></p>
-  <label for="fname">Location: Danville</label><br>
+  <label for="fname">Location: {{location}}</label><br>
 </form>
