--- a/Project/GroupProject/src/app/main-menu/main-menu.component.scss
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.scss
@@ -30,3 +30,27 @@
     width: 100%;
     position: relative;
 }
+
+
+
+
+
+.itemPreview {
+    margin: 16px;
+  }
+  .card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    max-width: 250px;
+    max-height: 350px;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
