added routing to each item on menu page and changed main menu to pull data from backend

--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -26,7 +26,7 @@ variables=[
 
 
 <div class="itemSet">
-    <div *ngFor="let item of items">
+    <div *ngFor="let item of items" [routerLink]="['/item-menu']">
         <div class="itemPreview" role="menuitem">
             <div class="card">
                 <img src="/assets/DuckLogo" alt="Avatar">
