item-create component and some routing

--- a/Project/GroupProject/src/app/item-edit/item-edit.component.html
+++ b/Project/GroupProject/src/app/item-edit/item-edit.component.html
@@ -21,7 +21,7 @@
         <label for = "itemDescription">Item Description:</label><br>
         <textarea name="itemDescription" id="itemDescription" formControlName="itemDescription"> </textarea>
       <p></p>
-        <button type="submit" name="Submit">Submit</button>
+        <button type="submit" name="Submit" (click)="submit()">Submit</button>
         <input type="submit" value="Update">
     </form>
 
