--- a/Project/GroupProject/src/app/top-bar/top-bar.component.html
+++ b/Project/GroupProject/src/app/top-bar/top-bar.component.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="card-container">
-            <button class="card card-small" (click)="onClick()">Profile</button>
+            <button class="card card-small" (click)="onClick()"[routerLink]="'/profile'">Profile</button>
         </div>
     </div>
 
