Adding more connectivity

--- a/Project/GroupProject/src/app/item-create/item-create.component.html
+++ b/Project/GroupProject/src/app/item-create/item-create.component.html
@@ -1,1 +1,36 @@
-<p>item-create works!</p>
+<app-top-bar></app-top-bar> 
+
+<link rel="stylesheet" href="item-create.component.scss">
+
+<div class="editProfile" style="text-align: center; border: 3px; border-color: black;">
+    
+  <h1>Add New Item:</h1>
+  <div class="information">
+    
+    <form [formGroup]="itemCreateForm ">
+      <label for = "file-upload-input">Upload Item Image:</label><br>
+      <input class= "file-upload-input" type="file" onchange="readURL(this)" accept="Image/"><br>
+      <p></p>
+        <label for = "iname">Item name:</label><br>
+        <input type="text" id="iname" name="iname" formControlName="iname"><br>
+      <p></p>
+      <label for = "price">Item Price:</label><br>
+      <label for = "price">$</label>
+        <input type="number" id="price" name="price" formControlName="price" min="0.01" step="0.01" max="2500" value="00.00"><br>
+      <p></p>
+        <label for = "itemDescription">Item Description:</label><br>
+        <textarea name="itemDescription" id="itemDescription" formControlName="itemDescription"> </textarea>
+      <p></p>
+        <button type="submit" name="Submit" (click)="submit()">Submit</button>
+        <input type="submit" value="Update">
+    </form>
+
+    <!-- <button (click)="test()">Test</button> -->
+  </div>
+</div>
+
+
+
+
+
+
