--- a/Project/GroupProject/src/app/top-bar/top-bar.component.html
+++ b/Project/GroupProject/src/app/top-bar/top-bar.component.html
@@ -4,7 +4,7 @@
 
 <!-- Top Bar -->
 <div class="mainbar" role="banner">
-    <div class="leftSide">
+    <div class="leftSide" [routerLink]="['']">
         <img
         width="80"
         alt="Quackhead Logo"
