--- a/Project/GroupProject/src/app/item-edit/item-edit.component.html
+++ b/Project/GroupProject/src/app/item-edit/item-edit.component.html
@@ -21,11 +21,8 @@
         <label for = "itemDescription">Item Description:</label><br>
         <textarea name="itemDescription" id="itemDescription" formControlName="itemDescription"> </textarea>
       <p></p>
-        <button type="submit" name="Submit" (click)="submit()">Submit</button>
-        <input type="submit" value="Update">
+        <button type="submit" name="Submit" (click)="submit()">Update</button>
     </form>
-
-    <!-- <button (click)="test()">Test</button> -->
   </div>
 </div>
 
