--- a/Project/GroupProject/src/app/main-menu/main-menu.component.html
+++ b/Project/GroupProject/src/app/main-menu/main-menu.component.html
@@ -19,7 +19,7 @@ variables=[
        <input type="text" placeholder="Search.." name="search">
        <i> </i>
        <button type="button" style="margin:20px">Search</button>
-       <button type="button" >Apply Filter</button>
+       <button type="button" [routerLink]="['item-create']">Create Item</button>
 
     </form>
 </div>
