--- a/Project/GroupProject/src/app/item-menu/item-menu.component.html
+++ b/Project/GroupProject/src/app/item-menu/item-menu.component.html
@@ -20,7 +20,7 @@
 <p></p>
 <form>
   <h2> Contact </h2>
-  <button type="button" style="margin:20px" [routerLink]="['item-edit', ItemID]">Edit Item</button>
+  <button type="button" style="margin:20px" [routerLink]="['/item-edit', ItemID]">Edit Item</button>
   <p></p>
   <label for="fname">First Name: {{firstName}}</label><br>
   <p></p>
